fix: menu overlap with navigation

--- a/_includes/assets/css/tailwind.css
+++ b/_includes/assets/css/tailwind.css
@@ -356,7 +356,7 @@ header button {
 }
 
 .menu-navigation {
-    z-index: 100;
+    z-index: 50;
     position: absolute;
     top: 0;
     left: 0;
